# sovereignangel.github.io

./: .env.example.thesis  .gitignore  ADVENTURE_SCHEMING_PRD.md  ARC_BRAND_STRATEGY.md  ATTUNE_PRD.md  CECON_STARTER.md  CLAUDE.md  CLAUDE_CODE_PLAYBOOK.md  DAILY_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  KITE_MASTERY_PLAN.md  LORI_PERSONAL_CONTEXT.md  README.md  REWARD_FUNCTION_ROADMAP.md  SETUP_GUIDE.md  THESIS_ENGINE_BRAND_STRATEGY.md  THESIS_ENGINE_PHILOSOPHY.md  THESIS_ENGINE_PRD.md  THESIS_ENGINE_V2_IMPLEMENTATION_PLAN.md  VECTOR_DATABASE_PLAN.md  WAVE_AI_INTEGRATION_GUIDE.md  blog-draft-reward-function-intro.md  command-center-v2.html  command-center.jsx  firestore.indexes.json  index.html  journal-entry-2026-03-26.md  latent-space-brand-strategy.jsx  middleware.ts  next.config.js  package-lock.json  package.json  scavenger-hunt.jsx  styles.css  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vm-setup.sh
harness/: README.md  pyproject.toml
harness/alfred/: __init__.py  config.py  runner.py
harness/alfred/models/: __init__.py  claude.py  ollama.py  routing.py
harness/alfred/tests/: test_routing.py  test_workflows.py
harness/alfred/tools/: firestore.py  gmail.py  inbox.py  polygon.py  supabase.py  wave.py  wikis.py
harness/alfred/workflows/: base.py  crm_rollup.py  dev_brief.py  investor_draft.py  meeting_actions.py  memo.py  todo_extract.py
harness/prompts/crm_rollup/: v1.md
harness/prompts/dev_brief/: v1.md
harness/prompts/investor_draft/: v1.md
harness/prompts/meeting_actions/: v1.md
harness/scripts/: run_alfred.sh
(+737 files in other folders)
